--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: linear-gradient(#1354A5 0%, #041832 33.33%, #041832 66.67%, #01080E 100%);
+    background: linear-gradient(#1d1b05 0%, #010a04 33.33%, #3a070b 66.67%, #161212 100%);
     height: 100vh;
     display: flex;
     align-items: center;
@@ -33,9 +33,9 @@ body::before {
     align-items: center;
     justify-content: space-between;
     border-radius: 24px;
-    border: 1px solid #1875E8;
+    border: 1px solid #000000;
     box-shadow: 4px 4px 20px 0px rgba(1, 8, 14, 0.15);
-    background-image: url("img/Ruido.png");
+    background-image: url("img/roxo.png");
     background-size: 100% 100%;
     position: relative;
 }
@@ -55,7 +55,7 @@ body::before {
 
 .container__botao {
     border-radius: 16px;
-    background: #1875E8;
+    background: #0c0c0c;
     padding: 16px 24px;
     width: 100%;
     font-size: 24px;
@@ -107,7 +107,7 @@ button {
 }
 
 button:disabled {
-    background-color: gray;
+    background-color: rgb(53, 51, 51);
 }
 
 @media screen and (max-width: 1250px) {
