--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: linear-gradient(#1d1b05 0%, #010a04 33.33%, #3a070b 66.67%, #161212 100%);
+    background: linear-gradient(#020202 0%, #000000 33.33%, #050505 66.67%, #220808 100%);
     height: 100vh;
     display: flex;
     align-items: center;
